Fixing alignment of superscript. Closes #863

--- a/web-server/plugins/slycat-cca/css/ui.css
+++ b/web-server/plugins/slycat-cca/css/ui.css
@@ -169,10 +169,6 @@
   display: inline-block;
   text-align: right;
 }
-#rsquared-label sup {
-  position: absolute;
-  margin-top: -3px;
-}
 .rowInput,
 .rowOutput
 {
